# fairscale

./: .codecov.yml  .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  README.md  RELEASE.md  codecov.yml  format.sh  grind  load_env.sh  pyproject.toml  release_utils.py  requirements-benchmarks.txt  requirements-dev.txt  requirements-test.txt  requirements.txt  run_mpi_tests.sh  setup.cfg  setup.py  t.py  test_output  update  version.json
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  questions-help-support.md
.github/workflows/: build_wheels.yml  manual-new.yml  (+5 more)
benchmarks/: ampnet.py  benchmark_dataset.py  datasets.py  experimental_ampnet.py  fsdp.py  models.py  moe.py  offload.py  oss.py  oss_experimental.py  pipe.py  transformer.py  utils.py
commands/: README.md  changed  changed.md  check  check.md  format  format.md  test  test.md  test_nocheck  test_nocheck.md
conda.recipe/: meta.yaml
docs/: Makefile  requirements.txt
examples/: helpers.py  mnist_test_oss.py  mnist_test_oss_pipe.py  mnist_test_pipe.py  tutorial_oss.py  tutorial_pipe.py  tutorial_pipe_multiprocess.py  tutorial_pipe_rpc.py  tutorial_slowmo.py
experimental/: __init__.py  setup.py
fairscale/: README.md  __init__.py  version.py
tests/: __init__.py  ci_test_list_1.txt  ci_test_list_2.txt  ci_test_list_3.txt  ci_test_list_check.sh  common_paths.py  conftest.py
tools/: _grind_completion  grind_completion
(+441 files in other folders)
